--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <version>0.1.9</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.aparapi</groupId>
+            <artifactId>aparapi</artifactId>
+            <version>1.4.1</version>
+        </dependency>
 
     </dependencies>
 
