--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
             <version>1.4.1</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
+
     </dependencies>
 
 
